Fix Bluetooth LE advertising logger for enableAdvertisingSet
- records enable/disable AdvertisingSet Correctly
- handles advertising disabled events by duration timeout (status is 60)

Bug: 213610155
Tag: #stability
Test: manual test with test app and adb shell dumpsys bluetooth_manager
Merged-In: I1ac5b56fe85cc06201c1346f4266ad0ff9d4e7bc
Change-Id: I1ac5b56fe85cc06201c1346f4266ad0ff9d4e7bc
(cherry picked from commit 7fc66d2c009ed005371ab8b23b219b1cb3e19169)